@@ -1,6 +1,7 @@
 Revision history for MIDI-Util
 
 {{$NEXT}}
+    - Don't import anything from MIDI::Simple.
 
 0.0601 2020-08-26 11:02:47
     - Add missing signature documentation.
